# Oroboros

./: .gitignore  README.md  bun.lockb  components.d.ts  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  version.json  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  icon.xcf
src-tauri/src/: app.rs  main.rs
src-tauri/src/commands/settings/: get_status.rs  mod.rs  set_click_repeater.rs  set_click_type.rs  set_hotkey.rs  set_interval.rs  set_is_randomized.rs  set_randomized_interval.rs  set_repeat_amount.rs  set_window_detection.rs  set_window_hwnd.rs
src-tauri/src/commands/util/: get_windows.rs  mod.rs
src-tauri/src/modules/: autoclicker.rs  hotkeys.rs  mod.rs  reactive.rs  state_broadcaster.rs  window_watcher.rs
src-tauri/src/shared/: state.rs
src/assets/: main.css
src/components/Inputs/: NumberInput.vue  RadioInput.vue  SwitchInput.vue
src/components/Settings/: ClickOptions.vue  ClickRepeat.vue  Hotkey.vue  Interval.vue  LockableWindows.vue  Status.vue
src/components/Util/: LabelContainer.vue  Loading.vue  SectionContainer.vue
src/stores/: useSettingsStore.ts
