[package]
name = "oroboros"
version = "0.1.0"
description = "Autoclicker App - Tauri with VueJS"
authors = ["Ron Miller"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
tauri = { version = "1.2.3", features = ["shell-open"] }
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = "1.0.91"
autopilot = "0.4.0"
device_query = "1.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
